# roguelike

./: .cursorignore  .gitignore  CHANGELOG.md  CLEANUP_PLAN.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DELETED_FILES_LIST.txt  EMERGENCY_FIX_PATCH.py  FILES_CHECKLIST.md  FINAL_SUMMARY.md  GITHUB_UPLOAD_GUIDE.md  PENDING_DECISIONS.md  QUICKSTART.md  QUICK_REFERENCE.txt  README.md  README_FINAL.md  SKELETON.md  TESTING_HELP.md  TEST_GUIDE.md  UI_UPDATE_README.md  accessory.py  accessory_effects.py  achievement.py  align_all_sprites.bat  attribute.py  attribute_effects.py  audio_system.py  auto_test.py  automated_test_system.py  balance_config.py  build.py  camera.py  complete_test.bat  complete_test.py  config.py  config_assets.py  controls.py  damage_text.py  demo_ui.py  elite_abilities.py  (+71 more)
core/: __init__.py  event_bus.py  events.py  game_state.py  scene_manager.py
data/: __init__.py  balance.yaml  demo.json  effect_reserve.py  enemies.json  levels.json
docs/: 100_PERCENT_COMPLETE_REPORT.md  ACCESSORY_EFFECTS_IMPLEMENTATION.md  ACCESSORY_ICONS_PROMPTS.md  ACCESSORY_ICONS_PROMPTS.txt  ACCESSORY_SKELETON.md  ACHIEVEMENT_TODO.md  AGENT_ONBOARDING.md  ALL_CHARACTERS_COMPLETE.md  ALL_TASKS_COMPLETED.md  ANIMATION_32_FRAMES.md  ARCHITECTURE_AUDIT.md  ARCHITECTURE_FIX_COMPLETE.md  ART_ASSETS_WITH_SKILLS_ANALYSIS.md  ART_COMPLETE_CHECKLIST.md  ART_FINAL_SOLUTION.md  ART_GENERATION_GUIDE.md  ART_INTEGRATION_COMPLETE.md  ART_INTEGRATION_FINAL.md  ART_INTEGRATION_PROGRESS.md  ART_INTEGRATION_STATUS.md  ART_ISSUE_DIAGNOSIS.md  ART_NEXT_STEPS.md  ART_UI_OPTIMIZATION_PLAN.md  ART_WORKFLOW_EVALUATION.md  ASSETS_COMPLETE_REPORT.md  ASSETS_ORGANIZATION_REPORT.md  AUTOMATED_TESTING_SYSTEM.md  BALANCE_DISCUSSION.md  BOSS_DESIGN.md  BUG_FIX_COMPLETE.md  CHARACTER_ART_BOSSES.md  CHARACTER_ART_ENEMIES.md  CHARACTER_ART_INDEX.md  CHARACTER_ART_PARTNERS.md  CHARACTER_ART_PLAYER.md  CHARACTER_ART_WORKFLOW.md  CHARACTER_PROMPTS_ALL.md  CODEBASE_OVERVIEW.md  CODE_IMPLEMENTATION_AND_DESIGN_PROPOSAL.md  COMBAT_DESIGN.md  (+120 more)
enemies/: __init__.py  base.py  factory.py  projectiles.py  utils.py
nodes/: __init__.py  base.py  combat.py  registry.py  shop.py
player/: __init__.py  combat.py  inventory.py  movement.py
scenes/: __init__.py  base.py  settings_scene.py  village_scene.py
scripts/: batch_generate_icons.py  build.py  generate_all_icon_configs.py  generate_fabao_icons.py  organize_assets.py  sd_fabao_config.json
systems/: __init__.py  combat.py  route.py  shop_manager.py  statistics.py
tests/: conftest.py  run_tests.py  test_32frame_animation.py  test_art_display.py  test_game.py  test_integration.py  test_player.py  test_player_sprite.py  test_ui.py
tools/: align_sprites.py  balance_test.py  batch_remove_bg.py  boss_practice.py  boss_sanity_check.py  copy_sprites_to_assets.py  create_placeholders.py  economy_snapshot.py  fairness_gate.py  organize_art.py  phase2_gate.py  phase_ready_check.py  procedural_movement.py  regression_gate.py  remove_bg.py  remove_bg_fast.py  smoke_test.py  sprite_loader.py  sprite_preview.py
ui/: __init__.py  character_panel.py  combat_log.py  components.py  fabao_display.py  hud.py  input_handler.py  ui_manager.py
utils/: __init__.py  (+1 more)
(+26 files in other folders)
